CHANGES
============================================================================

Release 0.2.20 (2011-05-05)
  [FIX] Update GCparser to v0.7.3 and adjust templates & theme to reflect
        changes on geocaching.com website.
  [FIX] Fix issues with database containing just a few finds (thanks hans
        for reporting).

Release 0.2.19 (2011-03-21)
  [FIX] Check the validity of downloaded elevation data.

Release 0.2.18 (2011-03-21)
  [FIX] GCparser update v0.7.0.

Release 0.2.17 (2010-11-10)
  [FIX] GCparser update v0.5.2.

Release 0.2.16 (2010-10-12)
  [FIX] Problem with timeout floats.

Release 0.2.15 (2010-10-10)
  [ADD] plugins/gccz_ratings now uses standard deviations instead of vote count.
  [ADD] plugins/myfinds_history javascript show/hide function.
  [FIX] Negative elevation data bug.
  [FIX] Empty myFinds list bug.
  [FIX] GCparser update v0.5.1.

Release 0.2.14 (2010-09-03)
  [ADD] plugins/cache now stores more information about PMonly caches.
  [FIX] GCparser update v0.4.9.

Release 0.2.13 (2010-07-30)
  [FIX] GCparser update: fix the issue with parsing myFinds.

Release 0.2.12 (2010-07-14)
  [FIX] PM-only cache - missing waypoint bug 2.

Release 0.2.11 (2010-07-09)
  [FIX] PM-only cache - missing waypoint bug.

Release 0.2.10 (2010-07-01)
  [FIX] Missing cache guid bug (update GCparser).

Release 0.2.9 (2010-06-07)
  [FIX] 10y cache type icon bugfix (again :)).

Release 0.2.8 (2010-06-07)
  [ADD] Update GCparser to v0.4.4.
  [ADD] New plugin: elevations (download SRTM data and generate statistics).
  [ADD] Move update scripts from Pyggs class to plugins.
  [FIX] Several typos.
  [FIX] Cache type bugfix.

Release 0.2.6 (2010-02-01)
  [ADD] Prevent myFinds databse update by empty list and force myFinds databse
        update on new version of Pyggs.
  [ADD] Update GCparser to v0.4.
  [FIX] Several typos.

Release 0.2.5 (2010-01-13)
  [FIX] GS webpage design update -> GCParser update.
  [FIX] Minor fixes in colored console output.