@@ -1,6 +1,8 @@
 CHANGES
 ============================================================================
 
+  [FIX] Fix handling of download errors.
+
 Release 0.2.20 (2011-05-05)
   [FIX] Update GCparser to v0.7.3 and adjust templates & theme to reflect
         changes on geocaching.com website.
